--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ env:
   KUBECTL_VERSION: 1.21.2
   KUSTOMIZE_VERSION: 4.1.3
   ISTIO_VERSION: 1.7.4
+  OPA_VERSION: 0.31.0
 
 jobs:
   test:
@@ -31,7 +32,7 @@ jobs:
         mkdir -p ${GITHUB_WORKSPACE}/bin/
 
         # install kubectl
-        curl -L https://storage.googleapis.com/kubernetes-release/release/v${KUBERNETES_VERSION}/bin/linux/amd64/kubectl -o ${GITHUB_WORKSPACE}/bin/kubectl && chmod +x ${GITHUB_WORKSPACE}/bin/kubectl
+        curl -L https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl -o ${GITHUB_WORKSPACE}/bin/kubectl && chmod +x ${GITHUB_WORKSPACE}/bin/kubectl
 
         # install kustomize
         curl -L https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE_VERSION}/kustomize_v${KUSTOMIZE_VERSION}_linux_amd64.tar.gz -o kustomize_v${KUSTOMIZE_VERSION}_linux_amd64.tar.gz && tar -zxvf kustomize_v${KUSTOMIZE_VERSION}_linux_amd64.tar.gz && chmod +x kustomize && mv kustomize ${GITHUB_WORKSPACE}/bin/kustomize
@@ -42,8 +43,15 @@ jobs:
         # install k3d
         curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | TAG=v${K3D_VERSION} bash
 
+        # install opa
+        curl -L https://github.com/open-policy-agent/opa/releases/download/v${OPA_VERSION}/opa_linux_amd64 -o ${GITHUB_WORKSPACE}/bin/opa && chmod +x ${GITHUB_WORKSPACE}/bin/opa
+
         # install yq
         sudo snap install yq
+
+    - name: Update GitHub Path
+      run: |
+        echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
 
     - name: Create the k3d cluster
       run: |
@@ -64,7 +72,8 @@ jobs:
 
     - name: Test ConstraintsTemplates
       run: |
-        ${GITHUB_WORKSPACE}/bin/bats -t tests/test.bats
+        ./rego.sh
+        bats -t tests/test.bats
 
     - name: Destroy the k3d cluster
       run: |
