feat(protectedb-auth): Add protected b authorization policy

--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -21,3 +21,6 @@ spec:
       - group: "networking.k8s.io"
         version: "v1beta1"
         kind: "Ingress"
+      - group: "security.istio.io"
+        version: "v1beta1"
+        kind: "AuthorizationPolicy"
