--- a/pod-security-policy/kustomization.yaml
+++ b/pod-security-policy/kustomization.yaml
@@ -41,6 +41,7 @@ bases:
   - forbidden-sysctls-interfaces
   - host-network-ports
   - metadata-restrictions
+  - protected-bauth
   - namespace-guardrails
   - read-only-root-filesystem
   - selinux
