feat(protectedb-auth): Proper name for kustomize

--- a/pod-security-policy/kustomization.yaml
+++ b/pod-security-policy/kustomization.yaml
@@ -41,7 +41,7 @@ bases:
   - forbidden-sysctls-interfaces
   - host-network-ports
   - metadata-restrictions
-  - protected-bauth
+  - protectedb-auth
   - namespace-guardrails
   - read-only-root-filesystem
   - selinux
