--- a/pod-security-policy/allowed-external-ips/template.yaml
+++ b/pod-security-policy/allowed-external-ips/template.yaml
@@ -11,6 +11,7 @@ spec:
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
+          type: object
           properties:
             allowedIPs:
               type: array
