--- a/pod-security-policy/enforce-apparmor-profile/template.yaml
+++ b/pod-security-policy/enforce-apparmor-profile/template.yaml
@@ -25,6 +25,7 @@ spec:
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
+          type: object
           properties:
             allowedProfiles:
               type: array
