--- a/service-mesh/port-naming/template.yaml
+++ b/service-mesh/port-naming/template.yaml
@@ -24,6 +24,7 @@ spec:
         kind: AllowedServicePortName
       validation:
         openAPIV3Schema:
+          type: object
           properties:
             prefixes:
               type: array
