--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -24,3 +24,9 @@ spec:
       - group: "security.istio.io"
         version: "v1beta1"
         kind: "AuthorizationPolicy"
+      - group: ""
+        version: "v1"
+        kind: "PersistentVolumeClaim"
+      - group: "networking.k8s.io"
+        version: "v1"
+        kind: "NetworkPolicy"
