feat(template): Update namespace guardrails

--- a/pod-security-policy/namespace-guardrails/template.yaml
+++ b/pod-security-policy/namespace-guardrails/template.yaml
@@ -11,7 +11,7 @@ spec:
         openAPIV3Schema:
           properties:
             objects:
-              type: array
+              type: object
               items:
                 type: object
                 groupVersion: string
