feat(templates): Update metadata-restrictions

--- a/pod-security-policy/metadata-restrictions/template.yaml
+++ b/pod-security-policy/metadata-restrictions/template.yaml
@@ -9,6 +9,7 @@ spec:
         kind: MetadataRestrictions
       validation:
         openAPIV3Schema:
+          type: object
           properties:
             annotations:
               type: array
