feat(templates): Update deny-extraction

--- a/pod-security-policy/deny-extraction/template.yaml
+++ b/pod-security-policy/deny-extraction/template.yaml
@@ -9,6 +9,7 @@ spec:
         kind: DenyExtraction
       validation:
         openAPIV3Schema:
+          type: object
           properties:
             podLabels:
               type: array
