feat(templates): Update deny-pipelines

--- a/pod-security-policy/deny-pipelines/template.yaml
+++ b/pod-security-policy/deny-pipelines/template.yaml
@@ -9,6 +9,7 @@ spec:
         kind: DenyPipelines
       validation:
         openAPIV3Schema:
+          type: object
           properties: {}
   targets:
     - target: admission.k8s.gatekeeper.sh
