--- a/pod-security-policy/forbidden-sysctls-interfaces/template.yaml
+++ b/pod-security-policy/forbidden-sysctls-interfaces/template.yaml
@@ -25,6 +25,7 @@ spec:
       validation:
         # Schema for the `parameters` field
         openAPIV3Schema:
+          type: object        
           properties:
             forbiddenSysctls:
               type: array
