--- a/service-mesh/gateway/template.yaml
+++ b/service-mesh/gateway/template.yaml
@@ -9,6 +9,7 @@ spec:
         kind: SecuredGateways
       validation:
         openAPIV3Schema:
+          type: object
           properties:
             approvedCipherSuites:
               type: array
