refactor(restrict-hostnames): restructure to better reuse code.

--- a/general/restrict-hostnames/template.yaml
+++ b/general/restrict-hostnames/template.yaml
@@ -22,117 +22,104 @@ spec:
       rego: |
         package restricthostnames
 
+        # Annotation which contains JSON information about exempted Hosts and Paths
+        annotation := "ingress.statcan.gc.ca/allowed-hosts"
+        # Allowed hosts scraped from the above annotation.
+        allowedHosts := json.unmarshal(data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations[annotation])
+
         identical(obj, review) {
-          obj.metadata.namespace == review.object.metadata.namespace
-          obj.metadata.name == review.object.metadata.name
+            obj.metadata.namespace == review.object.metadata.namespace
+            obj.metadata.name == review.object.metadata.name
         }
 
         is_exempt(host) {
-          exemption := input.parameters["exemptions"][_]
-          glob.match(exemption, [], host)
+            exemption := input.parameters["exemptions"][_]
+            glob.match(exemption, [], host)
         }
 
         # Host is permitted on namespace
         is_allowed(host) {
-          allowedHosts := json.unmarshal(data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations["ingress.statcan.gc.ca/allowed-hosts"])
-          allowedHost := allowedHosts[_]
-          host == allowedHost.host
+            allowedHost := allowedHosts[_]
+            host == allowedHost.host
         }
 
         # Host is permitted on namespace with no path restrictions
         is_allowed(host, path) {
-          allowedHosts := json.unmarshal(data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations["ingress.statcan.gc.ca/allowed-hosts"])
-          allowedHost := allowedHosts[_]
+            allowedHost := allowedHosts[_]
 
-          host == allowedHost.host
-          not allowedHost.path
+            host == allowedHost.host
+            not allowedHost.path
         }
 
         # Host and path is permitted
         is_allowed(host, path) {
-          allowedHosts := json.unmarshal(data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations["ingress.statcan.gc.ca/allowed-hosts"])
-          allowedHost := allowedHosts[_]
+            allowedHost := allowedHosts[_]
 
-          host == allowedHost.host
-          path == allowedHost.path
+            host == allowedHost.host
+            path == allowedHost.path
         }
 
         # Host and path is permitted, handling the "/*" prefix for Istio
         is_allowed(host, path) {
-          allowedHosts := json.unmarshal(data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations["ingress.statcan.gc.ca/allowed-hosts"])
-          allowedHost := allowedHosts[_]
+              allowedHost := allowedHosts[_]
 
-          host == allowedHost.host
-          endswith(path, "/*")
-          path == concat("", [allowedHost.path, "*"])
+            host == allowedHost.host
+            endswith(path, "/*")
+            path == concat("", [allowedHost.path, "*"])
         }
 
         # Ingress
         violation[{"msg": msg}] {
-          input.review.kind.kind == "Ingress"
-          input.review.kind.group == "networking.k8s.io"
+            input.review.kind.kind == "Ingress"
+            input.review.kind.group == "networking.k8s.io"
 
-          rule := input.review.object.spec.rules[_]
-          host := rule.host
-          path := rule.http.paths[_].path
+            rule := input.review.object.spec.rules[_]
+            host := rule.host
+            path := rule.http.paths[_].path
 
-          # Check if the hostname is exempt
-          not is_exempt(host)
+            # Check if the hostname is exempt
+            not is_exempt(host)
 
-          # Check if the hostname is allowed
-          not is_allowed(host, path)
+            # Check if the hostname is allowed
+            not is_allowed(host, path)
 
-          msg := sprintf("ingress host <%v> and path <%v> is not allowed for this namespace", [host, path])
+            msg := sprintf("ingress host <%v> and path <%v> is not allowed for this namespace", [host, path])
         }
 
         # Virtual Service
+        # Common validation for VirtualServices
+        virtual_service(path) {
+            input.review.kind.kind == "VirtualService"
+            input.review.kind.group == "networking.istio.io"
+
+            host := input.review.object.spec.hosts[_]
+
+            # Check if the hostname is exempt
+            not is_exempt(host)
+
+            # Check if the hostname is allowed
+            not is_allowed(host, path)
+
+            msg := sprintf("virtualservice host <%v> and path <%v> is not allowed for this namespace", [host, path])
+        }
+
         # (prefix)
         violation[{"msg": msg}] {
-          input.review.kind.kind == "VirtualService"
-          input.review.kind.group == "networking.istio.io"
+            path := input.review.object.spec.http[_].match[_].uri.prefix
 
-          host := input.review.object.spec.hosts[_]
-          path := input.review.object.spec.http[_].match[_].uri.prefix
-
-          # Check if the hostname is exempt
-          not is_exempt(host)
-
-          # Check if the hostname is allowed
-          not is_allowed(host, path)
-
-          msg := sprintf("virtualservice host <%v> and path <%v> is not allowed for this namespace", [host, path])
+            virtual_service(path)
         }
 
         # (exact)
         violation[{"msg": msg}] {
-          input.review.kind.kind == "VirtualService"
-          input.review.kind.group == "networking.istio.io"
+            path := input.review.object.spec.http[_].match[_].uri.exact
 
-          host := input.review.object.spec.hosts[_]
-          path := input.review.object.spec.http[_].match[_].uri.exact
-
-          # Check if the hostname is exempt
-          not is_exempt(host)
-
-          # Check if the hostname is allowed
-          not is_allowed(host, path)
-
-          msg := sprintf("virtualservice host <%v> and path <%v> is not allowed for this namespace", [host, path])
+            virtual_service(path)
         }
 
         # (regex)
         violation[{"msg": msg}] {
-          input.review.kind.kind == "VirtualService"
-          input.review.kind.group == "networking.istio.io"
+            path := input.review.object.spec.http[_].match[_].uri.regex
 
-          host := input.review.object.spec.hosts[_]
-          path := input.review.object.spec.http[_].match[_].uri.regex
-
-          # Check if the hostname is exempt
-          not is_exempt(host)
-
-          # Check if the hostname is allowed
-          not is_allowed(host, path)
-
-          msg := sprintf("virtualservice host <%v> and path <%v> is not allowed for this namespace", [host, path])
+            virtual_service(path)
         }
