--- a/general/restrict-hostnames/examples/constraint.yaml
+++ b/general/restrict-hostnames/examples/constraint.yaml
@@ -17,5 +17,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    ingress.statcan.gc.ca/allowed-hosts: '[{"host": "test.com","path":"/FINance"}]'
+    ingress.statcan.gc.ca/allowed-hosts: '[{"host": "pass.ca","path":"/FINance"}]'
   name: restrict-hostnames
