--- a/general/restrict-hostnames/examples/disallowed copy.yaml
+++ b/general/restrict-hostnames/examples/disallowed copy.yaml
@@ -1,7 +1,8 @@
 kind: Ingress
 apiVersion: extensions/v1beta1
 metadata:
-  name: my-app
+  name: fail-1
+  namespace: restrict-hostnames
 spec:
   host: "fail.com"
   rules:
