--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -36,3 +36,6 @@ spec:
       - group: "rbac.authorization.k8s.io"
         version: "v1"
         kind: "RoleBinding"
+      - group: "kubeflow.org"
+        version: "v1"
+        kind: "Notebook"
