--- a/pod-security-policy/deny-employee-only-features/examples/alice/pod.yaml
+++ b/pod-security-policy/deny-employee-only-features/examples/alice/pod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: alice-disallowed
+  namespace: alice
   labels:
     state.aaw.statcan.gc.ca/non-employee-users: "true"
 spec:
