--- a/pod-security-policy/deny-employee-only-features/examples/constraint.yaml
+++ b/pod-security-policy/deny-employee-only-features/examples/constraint.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   match:
     kinds:
-      - apiGroups: [""]
-        kinds: ["Pod"]
+      - apiGroups: ["", "kubeflow.org"]
+        kinds: ["Pod", "Notebook"]
