feat(pv-pvc-classification): ensure statically provisioned PVs match binding PVCs

--- a/gatekeeper-opa-sync.yaml
+++ b/gatekeeper-opa-sync.yaml
@@ -26,6 +26,9 @@ spec:
         kind: "AuthorizationPolicy"
       - group: ""
         version: "v1"
+        kind: "PersistentVolume"
+      - group: ""
+        version: "v1"
         kind: "PersistentVolumeClaim"
       - group: "networking.k8s.io"
         version: "v1"
