--- a/pod-security-policy/deny-employee-only-features/template.yaml
+++ b/pod-security-policy/deny-employee-only-features/template.yaml
@@ -16,8 +16,10 @@ spec:
         # Pod Object
         violation[{"msg": msg}] {
           input.review.object.kind == "Pod"
-          label := input.review.object.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
-          label == "true"
+          ns := input.review.object.metadata.namespace
+          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
+          profileLabel := input.parameters.labels[_]
+          profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"] == "true"
           container := input.review.object.spec.containers[_]
           startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
           msg := sprintf("Pod has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [label, container.image])
@@ -26,8 +28,10 @@ spec:
         # Notebook Object
         violation[{"msg": msg}] {
           input.review.object.kind == "Notebook"
-          label := input.review.object.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"]
-          label == "true"
+          ns := input.review.object.metadata.namespace
+          profile := data.inventory.cluster["kubeflow.org/v1"]["Profile"][ns]
+          profileLabel := input.parameters.labels[_]
+          profile.metadata.labels["state.aaw.statcan.gc.ca/non-employee-users"] == "true"
           container := input.review.object.spec.template.spec.containers[_]
           startswith(container.image, "k8scc01covidacr.azurecr.io/sas:")
           msg := sprintf("Notebook has state.aaw.statcan.gc.ca/non-employee-users=%v and container uses a SAS image %v", [label, container.image])
