feat: Add restrict-hostnames constraint template (#22)
* feat: Add restrict-hostnames constraint template

* refactor(restrict-hostnames): restructure to better reuse code.

* feat(restrict-hostnames): start adding some tests.

* feat(restrict-hostnames): finish tests for Ingress.

* feat(restrict-hostnames): add an exemption test.

* feat(restrict-hostnames): add a test for path case mismatch.

* feat(limit-hostnames): add test cases. Found enrror.

* refactor(limit-hotnames): refactor to make the code simpler and work for all cases.

* feat(limit-hostnames): add a few test cases and fix docs.

* feat(limit-hostnames): add rego to templates.

* fix: fixed a typo.

* fix: Update gatekeeper version to latest version

Fixes restricthostnames by using aversion of OPA that contains json.is_valid

* docs(README): add link for restrict-hostnames.

* feat(restrict-ingress): incorporate ingress-hostname-conflict (#38)

* feat(restrict-hostnames): rego+test for hostname collisions

* fix(restrict-ingress): rm unused import

* feat(restrict-hostnames): update template, rm ingress-hostnames-conflict

* feat(ingress-hostnames-conflict): restore and deprecate

* style(restrict-hostnames): opa fmt

* fix(restrict-hostnames): test case comment correction/clarification

* feat(restrict-hostnames): combined violation for hostname conflicts

Co-authored-by: Frances Zsurka <frances.zsurka@cloud.statcan.ca>

Co-authored-by: Justin Bertrand <justin.bertrand@canada.ca>
Co-authored-by: frazs <frances.zsurka@gmail.com>
Co-authored-by: Frances Zsurka <frances.zsurka@cloud.statcan.ca>

--- a/general/kustomization.yaml
+++ b/general/kustomization.yaml
@@ -25,7 +25,7 @@ bases:
   - container-image-must-have-digest
   - container-limits
   - deny-external-users
-  - ingress-hostnames-conflict
   - ingress-no-hostnames
   - loadbalancer-no-public-ips
   - pod-enforce-labels
+  - restrict-hostnames
