--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,13 @@ on:
 # Environment variables available to all jobs and steps in this workflow
 env:
   BATS_VERSION: 1.3.0
-  GATEKEEPER_VERSION: 3.5.2
+  GATEKEEPER_VERSION: 3.7.1
   K3D_VERSION: 4.4.7
   KUBECTL_VERSION: 1.21.2
   KUSTOMIZE_VERSION: 4.1.3
   ISTIO_VERSION: 1.7.4
-  OPA_VERSION: 0.31.0
+  OPA_VERSION: 0.34.0
+  YQ_VERSION: 4.22.1
 
 jobs:
   test:
@@ -47,7 +48,8 @@ jobs:
         curl -L https://github.com/open-policy-agent/opa/releases/download/v${OPA_VERSION}/opa_linux_amd64 -o ${GITHUB_WORKSPACE}/bin/opa && chmod +x ${GITHUB_WORKSPACE}/bin/opa
 
         # install yq
-        sudo snap install yq
+        curl -L https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION}/yq_linux_amd64 -o ${GITHUB_WORKSPACE}/bin/yq
+        chmod +x ${GITHUB_WORKSPACE}/bin/yq
 
     - name: Update GitHub Path
       run: |
